[project]
name = "site-doctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "google-adk>=2.3.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
]
